syntax = "proto3";
package provenance.epoch.v1;

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

option go_package          = "github.com/provenance-io/provenance/x/epoch/types";
option java_package        = "io.provenance.epoch.v1";
option java_multiple_files = true;

message EpochInfo {
  string identifier                 = 1;
  int64  start_height               = 2; // start height of the epoch
  int64  duration                   = 3; // in blocks
  int64  current_epoch              = 4;
  int64  current_epoch_start_height = 5;
  bool   epoch_counting_started     = 6;
}

// GenesisState defines the epochs module's genesis state.
message GenesisState {
  repeated EpochInfo epochs = 1 [(gogoproto.nullable) = false];
}
